# goit-pythonweb-hw-10

./: pyproject.toml
migrations/: env.py
src/: schemas.py
src/api/: auth.py  contacts.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py
src/services/: auth.py  contacts.py
